Working with customized data types
