# docs/swagger.json
@@ -95,8 +95,14 @@
                             "$ref": "#/definitions/model.User"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Bad Request",
                         "schema": {
                             "type": "object"
                         }
@@ -116,12 +122,15 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
                 "phone": {
+                    "type": "string"
+                },
+                "user_number": {
                     "type": "string"
                 }
             }
