# model/user.go
@@ -2,18 +2,29 @@ package model
 
 import (
 	"Cyantosh0/go-swag/config"
+	"database/sql"
+
+	"github.com/google/uuid"
+	"github.com/jinzhu/gorm"
 )
 
 type User struct {
-	Id      uint   `json:"id"`
-	Name    string `json:"name"`
-	Email   string `json:"email"`
-	Phone   string `json:"phone"`
-	Address string `json:"address"`
+	ID         BinaryUUID     `json:"id"`
+	Name       string         `json:"name"`
+	Email      string         `json:"email"`
+	Phone      string         `json:"phone"`
+	Address    string         `json:"address"`
+	UserNumber sql.NullString `json:"user_number" swaggertype:"string"`
 }
 
 func (u *User) TableName() string {
 	return "users"
+}
+
+func (u *User) BeforeCreate(db *gorm.DB) error {
+	id, err := uuid.NewRandom()
+	u.ID = BinaryUUID(id)
+	return err
 }
 
 //GetAllUsers Fetch all user data
@@ -33,7 +44,7 @@ func CreateUser(user *User) error {
 }
 
 //GetUserByID ... Fetch only one user by Id
-func GetUserByID(user *User, id string) error {
+func GetUserByID(user *User, id BinaryUUID) error {
 	if err := config.DB.Where("id = ?", id).First(user).Error; err != nil {
 		return err
 	}
